fondamenti/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/usr/lib/jvm/java-11-openjdk-amd64/bin/javadoc
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
/usr/share/bluej/bluejcore.jar:/usr/share/bluej/junit-4.11.jar:/usr/share/bluej/hamcrest-core-1.3.jar:/usr/share/bluej/lang-stride.jar:/usr/share/java/javafx-base-11.jar:/usr/share/java/javafx-controls-11.jar:/usr/share/java/javafx-fxml-11.jar:/usr/share/java/javafx-graphics-11.jar:/usr/share/java/javafx-media-11.jar:/usr/share/java/javafx-properties-11.jar:/usr/share/java/javafx-swing-11.jar:/usr/share/java/javafx-web-11.jar:/home/giulio/Desktop/uni/codici_uni/fondamenti
-d
/home/giulio/Desktop/uni/codici_uni/fondamenti/doc
-encoding
UTF-8
-charset
UTF-8
/home/giulio/Desktop/uni/codici_uni/fondamenti/Lezione5/MyWordProcessor_slow.java
<---- end of javadoc command ---->
Loading source file /home/giulio/Desktop/uni/codici_uni/fondamenti/Lezione5/MyWordProcessor_slow.java...
Constructing Javadoc information...
Standard Doclet version 11.0.9
Building tree for all the packages and classes...
Generating /home/giulio/Desktop/uni/codici_uni/fondamenti/doc/Lezione5/MyWordProcessor_slow.html...
Generating /home/giulio/Desktop/uni/codici_uni/fondamenti/doc/Lezione5/package-summary.html...
Generating /home/giulio/Desktop/uni/codici_uni/fondamenti/doc/constant-values.html...
/home/giulio/Desktop/uni/codici_uni/fondamenti/Lezione5/MyWordProcessor.java:10: error: > expected
    private Map<String, Set< pair<Integer, Integer>> miaMappa;
                                                     ^
/home/giulio/Desktop/uni/codici_uni/fondamenti/Lezione5/MyWordProcessor.java:26: error: not a statement
                miaMappa[];
                        ^
/home/giulio/Desktop/uni/codici_uni/fondamenti/Lezione5/MyWordProcessor.java:10: error: cannot find symbol
    private Map<String, Set< pair<Integer, Integer>> miaMappa;
                             ^
  symbol:   class pair
  location: class MyWordProcessor
/home/giulio/Desktop/uni/codici_uni/fondamenti/Lezione5/MyWordProcessor.java:10: error: wrong number of type arguments; required 2
    private Map<String, Set< pair<Integer, Integer>> miaMappa;
               ^
Building index for all the packages and classes...
Building index for all classes...
Generating /home/giulio/Desktop/uni/codici_uni/fondamenti/doc/allclasses.html...
Generating /home/giulio/Desktop/uni/codici_uni/fondamenti/doc/allclasses.html...
Generating /home/giulio/Desktop/uni/codici_uni/fondamenti/doc/index.html...
4 errors
